feat/go : Add auth on docs.
